# fugu-mppt-firmware

./: .gitignore  .gitmodules  2_Read_Sensors.ino  3_Device_Protection.ino  4_Charging_Algorithm.ino  5_System_Processes.ino  6_Onboard_Telemetry.ino  CMakeLists.txt  NOTES.MD  README.md  TODO.md  Test Cases.MD  build-for-webflash.sh  build-web-flash-bins.py  diagram.json  fugu-mppt-firmware.ino  internal adc.md  libs.md  ota.sh  partitions.csv  platformio.ini  provision.sh  sdkconfig  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32s3  wokwi.toml
build-scripts/: pio-build-web-flash-bins.py
components/: README.md
components/Adafruit_ADS1X15/: CMakeLists.txt
components/Arduino-LiquidCrystal-I2C/: CMakeLists.txt
components/ESPTelnet/: CMakeLists.txt
components/INA226_WE/: CMakeLists.txt
components/InfluxDB-Client-for-Arduino/: CMakeLists.txt
components/SimpleFTPServer/: CMakeLists.txt
components/esp32-semihosting-profiler/: CMakeLists.txt  sprofiler.py
config/: commands.md  make-image.py
config/fmetal/conf/: board.conf  charger.conf  coil.conf  converter.conf  mqtt.conf  sensor.conf  tele.conf  tracker.conf
config/fmetal2.2/conf/: board.conf  charger.conf  limits.conf
config/fugu1/fugu_int_adc/: README.md
config/psu_12v/: README.md
config/psu_12v/conf/: charger.conf  converter.conf  limits.conf
config/solar-boost/conf/: charger.conf  converter.conf  limits.conf  sensor.conf
data/: plotest.cpp
doc/: Configuration.md  Console.md  Control Loop.md  Diode Emulation.md  Diode Emulation.rst  Internal ADC.md  Logging.md  NOTES.MD  Power Loop.md  Real-Time Latency.md  Real-time Counter.md  Sensors.md  Serial Console.md  Signal Filters.md  Test Cases.MD  commerce.md  hw failurs  web.MD
doc/dev notes/: Real-Time Latency.md  libs.md  performance profiling.md
doc/dev-notes/: Clion IDE.md  Real-Time Latency.md  bat charging algorithms.md  binary size.md  data-storage.md  esp32.md  ina226.md  libs.md  performance profiling.md  pwm modes.md  simulator wokwi.md  spin-off.md  telemetry.md
doc/notes/: persistent storage.md
etc/: download.py  mqtt_client.py  mqtt_console.py  ntc.py  ota.py  upload.py
etc/micropython-relay/: relay.py
etc/mqtt-console-logger/: README.md  fugu-mqtt-console.service  mqtt_console.py
etc/notch-filter/: iout_50hz_inverter_noise.csv  notch.py
etc/scope-client/: README.md  anf.py  requirements.txt  scope-client.py
etc/scope-client/adaptive_noise_filter/: anf.py  ewm.py  iout.csv  ntc.csv
etc/scope-client/china-inverter-1kw-load/: iout.csv  vin.csv  vout.csv
etc/scope-client/data/: iout_451hz.csv  vin_401hz.csv
etc/scope-client/notch_filter/: vout_50hz_inverter.csv
etc/scope_client/: filt.py  ngscope.md  scope-client.py
etc/scope_client/adaptive_noise_filter/: adaptive-noise.py  anf_test.py  ewm.py  fir-vs-iir.py  noise-smooth-var.py  ucTemp.csv  vin.csv  vin1.csv  vout.csv
etc/scope_client/china-inverter-1kw-load/: ntc.csv  ucTemp.csv
etc/scope_client/data/: vout_451hz.csv
etc/scope_client/notch_filter/: notch-filter.py
main/: CMakeLists.txt  README.md  idf_component.yml
provisioning/: make-image.py
provisioning/dry/conf/: limits.conf  pins.conf  sensor.conf  tele.conf
provisioning/dry_int/conf/: coil.conf  pins.conf  sensor.conf
provisioning/dry_mock/conf/: pins.conf  pprof.conf  sensor.conf
provisioning/f2_test/conf/: sensor.conf
provisioning/fboost/conf/: coil.conf  converter.conf  limits.conf  pins.conf  sensor.conf  tracker.conf
provisioning/fmetal/conf/: charger.conf  coil.conf  limits.conf  (+5 more)
src/: 2_Read_Sensors.ino  5_System_Processes.ino  adc.h  adc_esp32.h  ads.h  backflow.h  battery.h  buck.h  charger.h  conf.h  console.cpp  console.h  control.h  cooling.h  fan.h  fugu-mppt-firmware.ino  fugu-mppt-firmware.ino.cpp  hw_config.h  i2c.h  lcd.cpp  lcd.h  led.h  logging.cpp  logging.h  main.cpp  metering.h  mppt.cpp  mppt.h  mqtt.cpp  mqtt.h  ota.h  pd_control.h  pinconfig.h  plot.h  pwm.h  rt.h  sampling.h  serial.h  statmath.h  store.h  (+7 more)
src-old/: 2_Read_Sensors.ino  4_Charging_Algorithm.ino
src/adc/: adc.h  adc_dummy.h  adc_esp32.h  adc_esp32_cont.cpp  adc_esp32_cont.h  ads.h  fake.h  ina226.h  mock.h  sampling.h
src/asciichart/: ascii.h  ascii2.h  constants.h  style.h  text.h
src/etc/: concurrentqueue.h  ota.cpp  ota.h  perf.h  plot.h  readerwriterqueue.h  rt.cpp  rt.h  version.h
src/math/: float16.cpp  float16.h  noise.h  notch.h  statmath.h
src/pwm/: backflow.h  ledc.h  mcpwm.h  mock.h
src/selftest/: backflow.h  highside.h
src/storage/: key-value.h
src/tele/: HAMqttDevice.cpp  HAMqttDevice.h  home_assistant.cpp  home_assistant.h  mqtt.cpp  mqtt.h  scope.h  telemetry.cpp  telemetry.h
src/viz/: lcd.cpp  led.h
src/web/: server.cpp  server.h
test/: README  main.cpp  main_ads_rate.cpp  test_buck.cpp  test_converter.cpp  test_math.cpp  test_meter.cpp  test_sampler.cpp
test/host-stub/: converter-test.cpp  integrator-test.cpp  mock.h  pins.conf  scope-test.cpp
(+62 files in other folders)
